fix: update artifacts UI (#140)
to solve the following problem (this image doesn't actually show it well
but it seems like the bar chart tool was always returning metadata-only
and not any data-data, seemingly having relied on sequentially returning
a table first then a bar chart before) in #121 :

<img width="775" height="976" alt="image"
src="https://github.com/user-attachments/assets/7b14a750-074f-43d6-96ba-6caf3756068b"
/>

I chose to include data alongside chart metadata in
`GenerateBarChartMetadataResponseMessage`

with those changes in place it now looks like this:
<img width="793" height="1170" alt="image"
src="https://github.com/user-attachments/assets/f907a662-5331-4819-a858-97b1210714cf"
/>

open to a diff approach.

------

UI changes 
- checks for bar chart type 
- renders artifacts separately now

---------
